--- a/part_4/bloglist/package.json
+++ b/part_4/bloglist/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "cross-env": "^10.0.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0"
   },
