--- a/part_2/phonebook/package.json
+++ b/part_2/phonebook/package.json
@@ -6,7 +6,7 @@
   "homepage": "/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node_modules/.bin/vite build",
     "build:ui": "bash -c \"rm -rf dist && npm run build && cp -r dist ../../part_3/backend\" ",
     "lint": "eslint .",
     "preview": "vite preview",
